# jake

./: .gitattributes  .gitignore  AGENTS.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  IDEA.md  IMPLEMENTATION_PLAN.md  Jakefile  README.md  REFACTOR.md  SECURITY.md  TODO.md  TUTORIAL.md  archetecture-refactor-insp-deepwiki.md  build.zig  build.zig.zon  justfile
.beads/: issues.jsonl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
corpus/: build.jake  common.jake  deploy.jake  docker.jake  main.jake  samples-04-hooks-Jakefile  samples-05-file-targets-Jakefile  samples-06-environment-Jakefile  samples-07-conditionals-Jakefile  samples-08-full-project-Jakefile  samples-Jakefile
docs/: CLI_DESIGN.md  CLI_DESIGN_V4.md  FUZZING.md  PROFILING.md  SYNTAX.md  SYSTEM_REVIEW.md  TUTORIAL.md  VERBOSE-LOCATIONS.md
editors/: FINAL_SUMMARY.md  (+5 more)
editors/tree-sitter-jake/: Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/tree-sitter-jake/bindings/go/: binding.go  binding_test.go
editors/tree-sitter-jake/bindings/python/tree_sitter_jake/: binding.c
editors/tree-sitter-jake/bindings/rust/: lib.rs
editors/tree-sitter-jake/bindings/swift/TreeSitterJake/: jake.h
editors/tree-sitter-jake/queries-src/: injections.scm
editors/tree-sitter-jake/queries/jake/: highlights.scm  locals.scm  textobjects.scm
editors/tree-sitter-jake/src/: grammar.json  node-types.json  parser.c  scanner.c
editors/tree-sitter-jake/test/corpus/: delimited.txt  directives.txt  recipes.txt  statements.txt
(+263 files in other folders)
