[package]
name = "tree-sitter-jake"
description = "Jake grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "jake"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/HelgeSverre/jake"
edition = "2021"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries-flavored/helix/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.24.4"

[build-dependencies]
cc = "1.2.1"
